# X-VR2

./: Doxyfile.tmpl  INSTALL  autogen.sh  configure  configure.ac  configure.sh
Core/examples/: Makefile.am  file_logger.cpp  pipeline-test.cpp  string-basics.cpp  vector-test.cpp
Core/examples/file/: stdio_in.cpp
Core/xvr2/: BackgroundFunction.cpp  BasicString.cpp  BasicString.h  BufferedTextInputStream.cpp  Byte.cpp  Chronograph.h  Chronometer.cpp  Chronometer.h  ConditionVar.cpp  DSObject.cpp  DSObject.h  Date.h  Deque.h  DetachedThread.cpp  DetachedThread.h  FileException.cpp  FileLogger.cpp  Function.cpp  InvalidParameterException.cpp  JoinableThread.cpp  Logger.cpp  Logger.h  Makefile.am  MessageStrings.cpp  MessageStrings.h  Mutex.cpp  Mutex.h  Object.cpp  PipelineFilter.h  Plugin.cpp  Plugin.h  RawInputStream.h  RawOutputStream.cpp  RawOutputStream.h  Semaphore.cpp  Semaphore.h  StandardError.cpp  StdioInterface.h  StdioOutputFile.h  StreamException.cpp  (+18 more)
Net/: configure.ac  gen_classnames.sh
Net/docs/: Doxyfile.in
Net/examples/: Makefile  Makefile.in  uritest  uritest.cpp
Net/xvr2/: BufferedSocketInputStream.h  ClientSocket.cpp  HTTPClient.h  HTTPResponse.h  IPv4Address.h  Makefile.in  NetworkExceptions.h  OldSocket.cpp  OldSocket.h  OldTCPServerSocket.cpp  OldTCPServerSocket.h  RawSocketInputStream.cpp  RawSocketInputStream.h  RawSocketOutputStream.cpp  Socket.h  SocketExceptions.cpp  TCPSocket.h  URI.cpp  X509.cpp  X509Issuer.h  X509Name.cpp  X509Subject.cpp  netdefs.h
SQL/drivers/pgsql/: Makefile.am  pgsql-drvng.cpp  pgsql-drvng.h
SQL/examples/: Makefile.am  embedded-sql.cpp
SQL/xvr2/: Connection.h  ConnectionMT.cpp  Driver.cpp  DriverInfo.h  DriverManager.h  Field.cpp  Field.h  Makefile.am
Text/xvr2/: ChecksumExceptions.cpp  ChecksumExceptions.h  ExtendedRegex.h  MD5.cpp  MD5.h  Makefile.am  Regex.cpp  Regex.h  RegexException.cpp
doc/: footer  (+1 more)
libs/xvr2gl/xvr2/: Display.cpp  DisplayDriver.cpp  Makefile.am  Object3D.cpp  Object3D.h  _xvr2glClassNames.cpp  xglDisplay.h  xglDisplayDriver.h  xglExceptions.cpp
libs/xvr2math/xvr2/: Makefile.am  Polygon.cpp  Polygon.h  Vector3.h  Vector4.h  _xvr2mathClassNames.cpp  xvr2mathdefs.h
libs/xvr2util/xvr2/: Array.h  ChecksumExceptions.h  ConfigFile.cpp  ExtendedRegex.h  List.h  Makefile.am  c_utilities.cpp  c_utilities.h
trunk/: AUTHORS  ChangeLog  Makefile.am  autogen.sh  config.h.in  configure  configure.ac  libtool
trunk/Core/: Makefile.am  gen_classnames.sh
trunk/Core/examples/: Makefile.am  datentime.cpp  file_logger  fl_output.txt  pipeline-test.cpp  vector-test.cpp
trunk/Core/xvr2/: BackgroundFunction.h  BasicString.cpp  BasicString.h  BasicStringBuffer.h  Buffer.cpp  Buffer.h  BufferedTextInputStream.h  Byte.cpp  Byte.h  Calendar.h  Chronograph.h  Chronometer.h  ConditionVar.h  Console.cpp  Console.h  Conversion.cpp  Conversion.h  CoreExceptions.cpp  CoreExceptions.h  DSO.cpp  DSO.h  DSObject.cpp  DSObject.h  DataTypes.h  Date.cpp  Date.h  DebugConsole.cpp  DebugConsole.h  DetachedThread.h  Exception.h  FileException.h  FileLogger.h  FinalizerCallback.cpp  FinalizerCallback.h  Function.h  Group.cpp  Group.h  HashMap.h  IOException.cpp  InvalidParameterException.h  (+76 more)
trunk/DB/: Makefile.am  autogen.sh  configure.ac  gen_classnames.sh  mkinstalldirs
trunk/DB/drivers/: Makefile.am
trunk/DB/xvr2/: Connection.h  ConnectionMT.h  DBConnection.cpp  DBConnectionMT.cpp  DBDriverInfo.cpp  DBDriverManager.cpp  DBField.cpp  DBOldDriver.cpp  DBResultSet.cpp  DatabaseException.cpp  DatabaseException.h  Driver.h  DriverInfo.h  DriverManager.h  Field.h  Makefile.am  OldDriver.h  ResultSet.h  _xvr2dbClassNames.cpp  _xvr2dbClassNames.h
trunk/Net/: Makefile.am  xvr2net.pc.in
trunk/Net/examples/: Makefile.am  Makefile.in
trunk/Net/xvr2/: BufferedSocketInputStream.cpp  ClientSocket.h  HTTPClient.cpp  IPv4Address.cpp  IPv4Address.h  IPv4Resolver.cpp  Makefile.am  Makefile.in  NetworkExceptions.cpp  NetworkExceptions.h  OldTCPSocket.cpp  OldTCPSocket.h  OldUDPServerSocket.h  OldUDPSocket.h  RawSocketOutputStream.h  SSLSocket.cpp  Socket.cpp  SocketExceptions.h  SocketProtocol.cpp  UDP.h  URI.cpp  URI.h  X509.h  X509Issuer.cpp  X509Issuer.h  X509Name.cpp  X509Name.h  X509Subject.cpp  X509Subject.h
trunk/Platform/: tags
trunk/Platform/xvr2/: CPU.cpp  Makefile.am  ProcessRunner.cpp
trunk/SDK_Docs/: Doxyfile.in  Makefile.in  sdk_mainpage.txt
trunk/SQL/: Makefile.am
trunk/SQL/examples/: Makefile.am  common_ng.cpp  common_ng.h  embedded-sql.cpp  embedded_common.h  rdbms.cpp
trunk/SQL/xvr2/: Connection.cpp  Connection.h  ConnectionMT.cpp  ConnectionMT.h  DBConnection.cpp  DBConnectionMT.cpp  DBDriverInfo.cpp  DBDriverManager.cpp  DBField.cpp  DBResultSet.cpp  DatabaseException.cpp  DatabaseException.h  Driver.h  DriverInfo.cpp  DriverInfo.h  DriverManager.cpp  DriverManager.h  Field.cpp  Field.h  Makefile.am  ResultSet.cpp  ResultSet.h
trunk/Text/: Makefile.am  xvr2text.pc.in
trunk/Text/xvr2/: ExtendedRegex.cpp  ExtendedRegex.h  Makefile  Regex.cpp  Regex.h  RegexException.h
trunk/X-VR2/libs/: COMPILATION_ORDER  compile-all.sh  recompile-all.sh
trunk/X-VR2/scripts/: change_version.sh
trunk/demos/core/: AUTHORS  Makefile.am  configure.ac
trunk/demos/net/: Makefile  simple_udpreceiver.cpp  simple_udpsender.cpp  udpclient.cpp
trunk/demos/util/: configure.ac
trunk/libs/: recompile-all.sh
trunk/libs/xvr2core/: Makefile.am  config.h.in  configure.ac  libtool  xvr2core.pc.in
trunk/libs/xvr2db/: Makefile.am  configure.ac  libtool
trunk/libs/xvr2gl/: configure.ac
trunk/libs/xvr2math/: Makefile.am  xvr2math.pc.in
trunk/libs/xvr2net/: Makefile.am  configure.ac
trunk/libs/xvr2platform/: Makefile.am  configure.ac  xvr2platform.pc.in
trunk/libs/xvr2util/: configure.ac  xvr2util.pc.in
trunk/xvr2/: ChangeLog  Doxyfile.tmpl  Makefile  configure.sh
trunk/xvr2/base/: configure.sh
trunk/xvr2/buildtools/: functions.sh
trunk/xvr2/common/: genheader.sh
trunk/xvr2/doc/: footer  upload.sh
trunk/xvr2/gl/: configure.sh
trunk/xvr2/gui/: configure.sh
trunk/xvr2core/: AUTHORS  configure.ac
(+1549 files in other folders)
